@@ -1,5 +1,6 @@
 - detect nvme devices as block devices (mga#17743)
 - detect partitions on nvme devices (mga#17743)
+- enable to use WebKit2 with mygtk3
 - drakboot:
   o partial fix for removing kernel from grub2 config (mga#16268)
 
